fixed gap between buttons and product list

--- a/src/app/product-list/product-list.component.scss
+++ b/src/app/product-list/product-list.component.scss
@@ -5,7 +5,12 @@
   display: block;
   height: auto;
   min-height: 35px;
-  padding: 0 0 15px 0;
+  padding: 0;
+
+  @include respond-to($media_large) {
+    padding: 0 0 15px 0;
+  }
+  
 }
 
 .fixed {
@@ -35,23 +40,9 @@
   }
   
   &__sidebar {
-    display: flex;
-    flex-wrap: wrap;
-
-    @include respond-to($media_large) {
-      width: 280px;
-      flex-shrink: 0;
-    }
-  }
-
-  &__content {
-    @include respond-to($media_large) {
-      flex-grow: 2;
-    }
-  }
-
-  &__active-filters {
     position: fixed;
+    display: flex;
+    flex-wrap: wrap;    
     top: 0;
     left: 0;
     bottom: 0;
@@ -65,21 +56,33 @@
     overflow-y: auto;
 
     @include respond-to($media_large) {
+      width: 280px;
+      flex-shrink: 0;
       position: static;
       width: auto;
       padding: 0 5px;    
       transform: none;
     }
-    
+
     &--opened {
       transform: translateX(0);
+    }
+  }
+
+  &__content {
+    @include respond-to($media_large) {
+      flex-grow: 2;
     }
   }
 
   &__header {
     display: flex;
     justify-content: space-between;
-    min-height: 42px;
+
+    @include respond-to($media_large) {
+      min-height: 42px;
+    }
+    
   }
 
   &__filter-toggle {
